@@ -8,7 +8,6 @@ import ybe.mini.travelserver.domain.room.entity.Room;
 import ybe.mini.travelserver.domain.room.repository.RoomRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,10 +17,10 @@ public class RoomService {
 
     @Transactional(readOnly = true)
     public List<RoomGetResponse> bringRooms(Long accommodationId) {
-        List<Room> rooms = roomRepository.findByAccommodationId(accommodationId);
-        return rooms.stream()
+        return roomRepository.findByAccommodationId(accommodationId)
+                .stream()
                 .map(RoomGetResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
